[package]
name = "color_transfer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.16", features = ["derive"] }
image = "0.24.7"
indicatif = "0.17.7"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.8.0"
